chore: trade api
