# openapi.json
@@ -1459,8 +1459,8 @@
     "/product": {
       "post": {
         "operationId": "createProduct",
-        "summary": "Create a fund account",
-        "description": "create fund account",
+        "summary": "Create a product",
+        "description": "create product",
         "parameters": [],
         "requestBody": {
           "required": true,
@@ -1474,7 +1474,7 @@
         },
         "responses": {
           "201": {
-            "description": "Fund account created successfully",
+            "description": "Product created successfully",
             "content": {
               "application/json": {
                 "schema": {
@@ -1495,8 +1495,8 @@
       },
       "get": {
         "operationId": "listProducts",
-        "summary": "List fund accounts",
-        "description": "List fund accounts",
+        "summary": "List products",
+        "description": "List products",
         "parameters": [
           {
             "name": "type",
@@ -1558,7 +1558,7 @@
         ],
         "responses": {
           "200": {
-            "description": "Fund accounts listed successfully",
+            "description": "Products listed successfully",
             "content": {
               "application/json": {
                 "schema": {
@@ -1584,8 +1584,8 @@
     "/product/{productId}": {
       "get": {
         "operationId": "getProductById",
-        "summary": "Get fund account by id",
-        "description": "Get fund account by id",
+        "summary": "Get product by id",
+        "description": "Get product by id",
         "parameters": [
           {
             "name": "productId",
@@ -1598,7 +1598,7 @@
         ],
         "responses": {
           "200": {
-            "description": "Fund account found successfully",
+            "description": "Product found successfully",
             "content": {
               "application/json": {
                 "schema": {
@@ -1619,8 +1619,8 @@
       },
       "patch": {
         "operationId": "updateProductById",
-        "summary": "Update fund account by id",
-        "description": "Update fund account by id",
+        "summary": "Update product by id",
+        "description": "Update product by id",
         "parameters": [
           {
             "name": "productId",
@@ -1643,7 +1643,7 @@
         },
         "responses": {
           "200": {
-            "description": "Fund account updated successfully",
+            "description": "Product updated successfully",
             "content": {
               "application/json": {
                 "schema": {
@@ -1664,8 +1664,8 @@
       },
       "delete": {
         "operationId": "deleteProductById",
-        "summary": "Delete fund account by id",
-        "description": "delete fund account by id",
+        "summary": "Delete product by id",
+        "description": "delete product by id",
         "parameters": [
           {
             "name": "productId",
@@ -1678,11 +1678,227 @@
         ],
         "responses": {
           "204": {
-            "description": "Fund account deleted successfully"
+            "description": "Product deleted successfully"
           }
         },
         "tags": [
           "Product"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      }
+    },
+    "/product/product-types": {
+      "get": {
+        "operationId": "listProductTypes",
+        "summary": "List all available product types",
+        "description": "获取product 类型列表",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "List of available product types",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ListProductTypeDto"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "Product"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      }
+    },
+    "/tradeday": {
+      "post": {
+        "operationId": "createTradeDay",
+        "summary": "Create a trade day",
+        "description": "create trade day",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateTradeDayDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Trade day created successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TradeDay"
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "TradeDay"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      },
+      "get": {
+        "operationId": "listTradeDays",
+        "summary": "List trade days",
+        "description": "List trade days",
+        "parameters": [
+          {
+            "name": "_sort",
+            "required": false,
+            "in": "query",
+            "description": "排序参数",
+            "schema": {
+              "enum": [
+                "createAt",
+                "-createAt",
+                "updateAt",
+                "-updateAt",
+                "date",
+                "-date"
+              ],
+              "type": "string"
+            }
+          },
+          {
+            "name": "date_gte",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "date_lte",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "format": "date-time",
+              "type": "string"
+            }
+          },
+          {
+            "name": "_limit",
+            "required": false,
+            "in": "query",
+            "description": "分页大小",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "_offset",
+            "required": false,
+            "in": "query",
+            "description": "分页偏移",
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Trade days listed successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/TradeDay"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "TradeDay"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      }
+    },
+    "/tradeday/{tradedayId}": {
+      "get": {
+        "operationId": "getTradeDayById",
+        "summary": "Get trade day by id",
+        "description": "Get trade day by id",
+        "parameters": [
+          {
+            "name": "tradedayId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Trade day found successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TradeDay"
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "TradeDay"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      },
+      "delete": {
+        "operationId": "deleteTradeDayById",
+        "summary": "Delete trade day by id",
+        "description": "delete trade day by id",
+        "parameters": [
+          {
+            "name": "tradedayId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Trade day deleted successfully"
+          }
+        },
+        "tags": [
+          "TradeDay"
         ],
         "security": [
           {
@@ -2657,6 +2873,68 @@
             "type": "string"
           }
         }
+      },
+      "ListProductTypeDto": {
+        "type": "object",
+        "properties": {
+          "type": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "type",
+          "name"
+        ]
+      },
+      "CreateTradeDayDto": {
+        "type": "object",
+        "properties": {
+          "date": {
+            "type": "string",
+            "description": "交易日期 YYYYMMDD"
+          }
+        },
+        "required": [
+          "date"
+        ]
+      },
+      "TradeDay": {
+        "type": "object",
+        "properties": {
+          "date": {
+            "type": "string",
+            "description": "交易日期 YYYYMMDD"
+          },
+          "id": {
+            "type": "string",
+            "description": "Entity id"
+          },
+          "createAt": {
+            "format": "date-time",
+            "type": "string",
+            "description": "Entity created at when"
+          },
+          "updateAt": {
+            "format": "date-time",
+            "type": "string",
+            "description": "Entity updated at when"
+          },
+          "createBy": {
+            "type": "string",
+            "description": "Entity created by who"
+          },
+          "updateBy": {
+            "type": "string",
+            "description": "Entity updated by who"
+          }
+        },
+        "required": [
+          "date",
+          "id"
+        ]
       }
     }
   }
