# src/trade-day/dto/create-trade-day.dto.ts
@@ -1,0 +1,5 @@
+import { OmitType } from '@nestjs/swagger';
+
+import { TradeDayDoc } from '../entities/trade-day.entity';
+
+export class CreateTradeDayDto extends OmitType(TradeDayDoc, [] as const) {}
